--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Colorchanger</title>	
+	<title>My Test Area</title>	
 	
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
