add other image

--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
 	
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
-<body style="background-color:GREEN;"> 
-
-	
-	<!-- <a href="special.html">To special page!</a> -->
+<body style="background-color:GREEN;"> 		
 	<center>
-	
-	<!-- <img src="ily.jpg" alt="i love you" width="auto" height="auto"> -->
-	
-	
+		
 	<audio controls autoplay preload="auto">		
 		<source src="allstar.mp3" autoplay type="audio/mpeg">
 		Your browser does not support the audio element.
@@ -26,6 +20,8 @@
 		<source src="bockwurst.mp3" autoplay type="audio/mpeg">		
 		Your browser does not support the audio element.
 	</audio>  <br><br>
+	
+	<img src="ily.jpg" alt="i love you" width="auto" height="auto">
 	
 	</center>		
 
