--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
 	<title>My Test Area</title>	
 	
-	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
-<body style="background-color:GREEN;"> 		
+<body style="background-color:GREEN;"> 			
 	<center>
 	
-	<h1>English</h1>
+	<h1>Landing Page</h1>
 		
 	<audio controls autoplay preload="auto">		
-		<source src="../allstar.mp3" autoplay type="audio/mpeg">
+		<source src="allstar.mp3" autoplay type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>  <br><br>
 			
-	<img src="../somebody.png" alt="i love you" width="auto" height="auto"> <br><br>
+	<img src="somebody.png" alt="i love you" width="auto" height="auto"> <br><br>
 	<!-- <img src="me.jpg" alt="i love you" width="auto" height="auto"> -->
 	
 	<audio controls preload="auto">
-		<source src="../bockwurst.mp3" autoplay type="audio/mpeg">		
+		<source src="bockwurst.mp3" autoplay type="audio/mpeg">		
 		Your browser does not support the audio element.
 	</audio>  <br><br>
 	
-	<img src="../ily.jpg" alt="i love you" width="auto" height="auto">
+	<img src="ily.jpg" alt="i love you" width="auto" height="auto">
 	
 	</center>		
 
